--- a/client/src/features/auth/forgotPassword/ui/forgotPassword.scss
+++ b/client/src/features/auth/forgotPassword/ui/forgotPassword.scss
@@ -1,4 +1,79 @@
+.Modal_content__oJU2M {
+  width: 378px;
+  height: 228px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
 
+#g-recaptcha-error {
+  color: var(--danger-color-500);
+  font-family: Inter, serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 4px;
+}
+
+.modal-header {
+  width: 100%;
+  height: 59px;
+  display: flex;
+  justify-content: center;
+  border-bottom: solid 1px #4C4C4B;
+  align-items: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 180% */
+}
+
+.modal-header div {
+  width: 85%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.close-button {
+  cursor: pointer;
+}
+
+.body-modal {
+  width: 85%;
+  height: 78px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.body-modal p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.modal-footer {
+  width: 85%;
+  margin-top: 18px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Button_primary__6XwhR {
+  width: 96px;
+}
+
+.Button_primary__6XwhR a{
+  color: #FFF;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+}
 
 .info {
   margin-bottom: 7px;
